--- a/grpc-swagger-core/pom.xml
+++ b/grpc-swagger-core/pom.xml
@@ -142,14 +142,14 @@
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>0.5.1</version>
+                <version>0.6.1</version>
                 <configuration>
                     <protocArtifact>
-                        com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}
+                        com.google.protobuf:protoc:4.28.1:exe:${os.detected.classifier}
                     </protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>
-                        io.grpc:protoc-gen-grpc-java:1.16.1:exe:${os.detected.classifier}
+                        io.grpc:protoc-gen-grpc-java:1.68.1:exe:${os.detected.classifier}
                     </pluginArtifact>
                 </configuration>
                 <executions>
