--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>grpc-swagger-core</module>
         <module>grpc-swagger-web</module>
-        <module>grpc-swagger-demo</module>
+        <!--        <module>grpc-swagger-demo</module>-->
     </modules>
     <packaging>pom</packaging>
 
